deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apptracker
  labels:
    app.kubernetes.io/name: apptracker
spec:
  selector:
    app.kubernetes.io/name: apptracker
  ports:
    - name: http
      port: 80
      targetPort: http
